--- a/Documents/Coding Temple/Coding Projects/Roll a Story/index.html
+++ b/Documents/Coding Temple/Coding Projects/Roll a Story/index.html
@@ -11,6 +11,9 @@
   <title>Roll a Story Prompt Generator</title>
 
 </head>
+<style class="">
+  @import url('https://fonts.googleapis.com/css2?family=Caveat&family=Montserrat:wght@300&family=Passion+One:wght@400;700&family=Roboto:wght@300&display=swap');
+</style>
 <!-- <body> -->
   <div id="main-content" class="container mx-auto p-8">
     <h1 class="">Writing Roulette:</h1>
