--- a/Documents/Coding Temple/Coding Projects/Roll a Story/index.html
+++ b/Documents/Coding Temple/Coding Projects/Roll a Story/index.html
@@ -15,7 +15,7 @@
   @import url('https://fonts.googleapis.com/css2?family=Caveat&family=Montserrat:wght@300&family=Passion+One:wght@400;700&family=Roboto:wght@300&display=swap');
 </style>
   <div id="main-content" class="container mx-auto p-8">
-    <h1 class="">Writing Roulette:</h1>
+    <h1 class="">Writing Prompt Generator:</h1>
     <h1 class="">let chance write your story</h1>
     <p id="main-prompt" class=""></p>
     <button id="generate-btn" class="" onclick="generatePrompt()">Generate</button>
